# dynamic_qml_component

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  Main.qml  main.cc  main.cpp  version.hxx
app/application/: dqc_application.cc  dqc_application.hxx
app/qml/constants/: Constants.qml
app/qml/contents/: DQC_Rectangle.qml
app/src/: dqc_model.cc  dqc_model.hxx  dqc_proprty.cc  dqc_proprty.hxx  json_parser.cc  json_parser.hxx
cnfg/: backend_1.json  backend_2.json  backend_3.json  backend_5.json  frontend.json
configured/: config.hpp.in
